syntax = "proto3";

option go_package = "github.com/RafaelRochaS/above-account-service/";

package above.account_service;

service User {
  rpc CreateUser (UserCreateRequest) returns (UserCreateReply) {}
}

message UserCreateRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string address = 4;
  int32 age = 5;
}

message UserCreateReply {
  string status = 1;
}